--- a/src/main/resources/templates/site/discuss-detail.html
+++ b/src/main/resources/templates/site/discuss-detail.html
@@ -89,7 +89,7 @@
 						<ul class="d-inline float-right">
 							<li class="d-inline ml-2">
 								<a href="javascript:;" th:onclick="|like(this,1,${post.id},${post.userId},${post.id});|" class="text-primary">
-									<b th:text="${likeStatus==1?'已赞':'赞'}">赞</b> <i th:text="${likeCount}">11</i>
+<!--									<b th:text="${likeStatus==1?'已赞':'赞'}">赞</b> <i th:text="${likeCount}">11</i>-->
 								</a>
 							</li>
 							<li class="d-inline ml-2">|</li>
@@ -140,7 +140,7 @@
 							<ul class="d-inline float-right">
 								<li class="d-inline ml-2">
 									<a href="javascript:;" th:onclick="|like(this,2,${cvo.comment.id},${cvo.comment.userId},${post.id});|" class="text-primary">
-										<b th:text="${cvo.likeStatus==1?'已赞':'赞'}">赞</b>(<i th:text="${cvo.likeCount}">1</i>)
+<!--										<b th:text="${cvo.likeStatus==1?'已赞':'赞'}">赞</b>(<i th:text="${cvo.likeCount}">1</i>)-->
 									</a>
 								</li>
 								<li class="d-inline ml-2">|</li>
@@ -166,7 +166,7 @@
 									<ul class="d-inline float-right">
 										<li class="d-inline ml-2">
 											<a href="javascript:;" th:onclick="|like(this,2,${rvo.reply.id},${rvo.reply.userId},${post.id});|" class="text-primary">
-												<b th:text="${rvo.likeStatus==1?'已赞':'赞'}">赞</b>(<i th:text="${rvo.likeCount}">1</i>)
+<!--												<b th:text="${rvo.likeStatus==1?'已赞':'赞'}">赞</b>(<i th:text="${rvo.likeCount}">1</i>)-->
 											</a>
 										</li>
 										<li class="d-inline ml-2">|</li>
@@ -205,7 +205,6 @@
 					</div>
 				</li>
 			</ul>
-			<!-- 分页 -->
 			<nav class="mt-5" th:replace="index::pagination">
 				<ul class="pagination justify-content-center">
 					<li class="page-item"><a class="page-link" href="#">首页</a></li>
